--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,53 @@
-igjslkfjdkljslks
+<div class="topbar">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 offset-sm-2">
+      <div class="entry">
+        <div class="performer">
+          Trent
+        </div>
+        <div class="movement">
+          Movement <span class="movement-number">3</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 offset-sm-2">
+      <div class="entry">
+        <div class="performer">
+          Michelle
+        </div>
+        <div class="movement">
+          Movement <span class="movement-number">3</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 offset-sm-2">
+      <div class="entry">
+        <div class="performer">
+          Micaela
+        </div>
+        <div class="movement">
+          Movement <span class="movement-number">3</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 offset-sm-2">
+      <div class="entry">
+        <div class="performer">
+          David
+        </div>
+        <div class="movement">
+          Movement <span class="movement-number">3</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
