--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,7 @@ html, body, .container {
 
 .entry:hover {
   cursor: url('/images/heart.png') 64 64, auto;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 .entry:active {
