--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
           Trent
         </div>
         <div class="movement">
-          Movement <span class="movement-number">3</span>
+          Movement <span class="movement-number">{{moves.[0]}}</span>
         </div>
       </div>
     </div>
@@ -21,7 +21,7 @@
           Michelle
         </div>
         <div class="movement">
-          Movement <span class="movement-number">3</span>
+          Movement <span class="movement-number">{{moves.[1]}}</span>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
           Micaela
         </div>
         <div class="movement">
-          Movement <span class="movement-number">3</span>
+          Movement <span class="movement-number">{{moves.[2]}}</span>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
           David
         </div>
         <div class="movement">
-          Movement <span class="movement-number">3</span>
+          Movement <span class="movement-number">{{moves.[3]}}</span>
         </div>
       </div>
     </div>
