--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,11 +6,15 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
+          <img class="propic" src="/images/propics/trent.jpg" />
           Trent
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[0]}}</span>
         </div>
+        <div class="image">
+          <img src="/images/movements/image{{moves.[0]}}.png"/>
+        </div>
       </div>
     </div>
   </div>
@@ -18,11 +22,15 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
+          <img class="propic" src="/images/propics/trent.jpg" />
           Michelle
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[1]}}</span>
         </div>
+        <div class="image">
+          <img src="/images/movements/image{{moves.[1]}}.png"/>
+        </div>
       </div>
     </div>
   </div>
@@ -30,11 +38,15 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
+          <img class="propic" src="/images/propics/trent.jpg" />
           Micaela
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[2]}}</span>
         </div>
+        <div class="image">
+          <img src="/images/movements/image{{moves.[2]}}.png"/>
+        </div>
       </div>
     </div>
   </div>
@@ -42,10 +54,14 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
+          <img class="propic" src="/images/propics/trent.jpg" />
           David
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[3]}}</span>
+        </div>
+        <div class="image">
+          <img src="/images/movements/image{{moves.[3]}}.png"/>
         </div>
       </div>
     </div>
