--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
-          <img class="propic" src="/images/propics/trent.jpg" />
+          <img class="propic" src="/images/propics/michelle.jpg" />
           Michelle
         </div>
         <div class="movement">
@@ -38,7 +38,7 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
-          <img class="propic" src="/images/propics/trent.jpg" />
+          <img class="propic" src="/images/propics/micaela.jpg" />
           Micaela
         </div>
         <div class="movement">
@@ -54,7 +54,7 @@
     <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
-          <img class="propic" src="/images/propics/trent.jpg" />
+          <img class="propic" src="/images/propics/david.jpg" />
           David
         </div>
         <div class="movement">
