--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,10 @@
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/trent.jpg" />
-          Trent
+          <div class="performer-meta">
+            <div class="name">Trent</div>
+            <div class="meta">Just now</div>
+          </div>
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[0]}}</span>
@@ -23,7 +26,10 @@
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/michelle.jpg" />
-          Michelle
+          <div class="performer-meta">
+            <div class="name">Michelle</div>
+            <div class="meta">Just now</div>
+          </div>
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[1]}}</span>
@@ -39,7 +45,10 @@
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/micaela.jpg" />
-          Micaela
+          <div class="performer-meta">
+            <div class="name">Micaela</div>
+            <div class="meta">Just now</div>
+          </div>
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[2]}}</span>
@@ -55,7 +64,10 @@
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/david.jpg" />
-          David
+          <div class="performer-meta">
+            <div class="name">David</div>
+            <div class="meta">Just now</div>
+          </div>
         </div>
         <div class="movement">
           Movement <span class="movement-number">{{moves.[3]}}</span>
