--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,10 +19,6 @@
           <img src="/images/movements/image{{moves.[0]}}.png"/>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/michelle.jpg" />
@@ -38,10 +34,6 @@
           <img src="/images/movements/image{{moves.[1]}}.png"/>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/micaela.jpg" />
@@ -57,10 +49,6 @@
           <img src="/images/movements/image{{moves.[2]}}.png"/>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-6 offset-sm-2">
       <div class="entry">
         <div class="performer">
           <img class="propic" src="/images/propics/david.jpg" />
@@ -76,6 +64,23 @@
           <img src="/images/movements/image{{moves.[3]}}.png"/>
         </div>
       </div>
+    </div>
+    <div class="col-sm-4">
+      <p>
+        Title: Abstraction
+      </p>
+
+      <p>
+        Choreographer: This website and the audience
+      </p>
+
+      <p>
+        Source: Martha Graham, “Errand into the Maze” (performed 1990) ~ Jose Limón, “The Emperor Jones” (1956) ~ Katherine Dunham, “Stormy Weather” (1943) ~ Isadora Duncan, Performing Company
+      </p>
+
+      <p>
+      This performance aims to display modern forms of media consumption through dance.  Our performance is (loosely) inspired by the assorted works of Katherine Dunham, Martha Graham, Isadora Duncan, and José Limón. Each ‘round’, our algorithm will randomly give each of our dancers a dance move inspired by one of these artists. The audience will vote on which movements they liked best out of the four they saw.  Each time someone votes for a specific movement, the chances of that movement appearing again increases. Over time, a handful of movements will have a much higher probability of appearing than the rest, mimicking current algorithms used on social media websites. By removing each movement from its original context, it becomes less and less clear what each movement actually means just as it becomes less clear why certain movements are more “well liked” than others.
+      </p>
     </div>
   </div>
 </div>
